[package]
name = "godbox"
version = "0.1.0"
authors = ["quantumsheep <nathanael.dmc@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = "1.0.125"
serde_json = "1.0.64"
serde_derive = "1.0.125"
base64 = "0.13.0"
rand = "0.8.3"
derive_builder = "0.10.2"
