[package]
name = "godbox"
version = "1.0.0"
authors = ["quantumsheep <nathanael.dmc@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-web-validator = "2"
validator = { version = "0.12", features = ["derive"] }
derive_more = { version = "0.99", features = ["display", "error"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
rand = "0.8.3"
derive_builder = "0.10.2"
merge = "0.1.0"
